--- a/.github/workflows/manual-test-pirate-agent.yml
+++ b/.github/workflows/manual-test-pirate-agent.yml
@@ -12,8 +12,11 @@ jobs:
     permissions:
       contents: read
     steps:
+      - name: Checkout code
+        uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
+
       - name: Ask pirate agent about shipments
-        uses: docker/cagent-action@v1.0.0
+        uses: ./
         with:
           agent: agentcatalog/pirate
           prompt: "What do we ship today?"
