--- a/examples/code-analysis.yml
+++ b/examples/code-analysis.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Analyze Code Changes
         id: analysis
-        uses: docker/cagent-action@v1.0.4
+        uses: docker/cagent-action@latest
         with:
           agent: docker/code-analyzer
           prompt: |
