--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -19,6 +19,8 @@ jobs:
   security-scan:
     name: Security Scan with cagent
     runs-on: ubuntu-latest
+    env:
+      HAS_APP_SECRETS: ${{ secrets.CAGENT_REVIEWER_APP_ID != '' }}
     permissions:
       contents: read
       issues: write
@@ -27,6 +29,15 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0 # Need full history to get commits from past week
+
+      # Generate GitHub App token so issues appear as the custom app (optional - falls back to github.token)
+      - name: Get GitHub App token
+        id: app-token
+        if: env.HAS_APP_SECRETS == 'true'
+        uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a # v2
+        with:
+          app_id: ${{ secrets.CAGENT_REVIEWER_APP_ID }}
+          private_key: ${{ secrets.CAGENT_REVIEWER_APP_PRIVATE_KEY }}
 
       - name: Get commits from past week
         id: commits
@@ -234,7 +245,7 @@ jobs:
       - name: Create security issue
         if: steps.check-issues.outputs.has_issues == 'true'
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ steps.app-token.outputs.token || github.token }}
           OUTPUT_FILE: ${{ steps.scan.outputs.output-file }}
           COMMIT_COUNT: ${{ steps.commits.outputs.commit_count }}
           DAYS_BACK: ${{ inputs.days_back || '7' }}
