--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -105,6 +105,7 @@ jobs:
           fi
 
       - name: Checkout code
+        if: steps.fork-check.outputs.is_fork != 'true'
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
 
       - name: Run test
@@ -162,7 +163,6 @@ jobs:
 
           echo "✅ Found agent response content"
           echo "Response preview: $(echo "$CONTENT" | head -n 1)"
-
 
   test-invalid-agent:
     name: Invalid Agent Test
