--- a/review-pr/action.yml
+++ b/review-pr/action.yml
@@ -37,7 +37,13 @@ inputs:
     description: "Mistral API key"
     required: false
   github-token:
-    description: "GitHub token for API access"
+    description: "GitHub token for API access (overridden if github-app-id is provided)"
+    required: false
+  github-app-id:
+    description: "GitHub App ID for custom app identity (comments/reviews will appear as the app)"
+    required: false
+  github-app-private-key:
+    description: "GitHub App private key (required if github-app-id is provided)"
     required: false
   cagent-version:
     description: "Version of cagent to use"
@@ -96,11 +102,41 @@ runs:
           echo "ℹ️  No comment ID - reactions will be skipped"
         fi
 
+    # Generate GitHub App token if credentials are provided
+    # This allows comments/reviews to appear as the custom app instead of github-actions[bot]
+    - name: Generate GitHub App token
+      id: app-token
+      if: inputs.github-app-id != ''
+      uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a # v2
+      with:
+        app_id: ${{ inputs.github-app-id }}
+        private_key: ${{ inputs.github-app-private-key }}
+
+    # Resolve which token to use: app token > explicit github-token > default github.token
+    - name: Resolve GitHub token
+      id: resolve-token
+      shell: bash
+      run: |
+        if [ -n "$APP_TOKEN" ]; then
+          echo "✅ Using GitHub App token"
+          echo "token=$APP_TOKEN" >> $GITHUB_OUTPUT
+        elif [ -n "$EXPLICIT_TOKEN" ]; then
+          echo "✅ Using provided github-token"
+          echo "token=$EXPLICIT_TOKEN" >> $GITHUB_OUTPUT
+        else
+          echo "ℹ️  Using default github.token"
+          echo "token=$DEFAULT_TOKEN" >> $GITHUB_OUTPUT
+        fi
+      env:
+        APP_TOKEN: ${{ steps.app-token.outputs.token }}
+        EXPLICIT_TOKEN: ${{ inputs.github-token }}
+        DEFAULT_TOKEN: ${{ github.token }}
+
     - name: Add eyes reaction
       if: steps.resolve-context.outputs.comment-id != ''
       shell: bash
       env:
-        GH_TOKEN: ${{ inputs.github-token || github.token }}
+        GH_TOKEN: ${{ steps.resolve-token.outputs.token }}
       run: |
         gh api repos/${{ github.repository }}/issues/comments/${{ steps.resolve-context.outputs.comment-id }}/reactions \
           -X POST -f content='eyes' || true
@@ -109,7 +145,7 @@ runs:
       id: pr-info
       shell: bash
       env:
-        GH_TOKEN: ${{ inputs.github-token || github.token }}
+        GH_TOKEN: ${{ steps.resolve-token.outputs.token }}
         PR_NUMBER: ${{ steps.resolve-context.outputs.pr-number }}
       run: |
         gh pr view $PR_NUMBER --json files -q '.files[].path' > changed_files.txt
@@ -204,7 +240,7 @@ runs:
         xai-api-key: ${{ inputs.xai-api-key }}
         nebius-api-key: ${{ inputs.nebius-api-key }}
         mistral-api-key: ${{ inputs.mistral-api-key }}
-        github-token: ${{ inputs.github-token }}
+        github-token: ${{ steps.resolve-token.outputs.token }}
         cagent-version: ${{ inputs.cagent-version }}
         extra-args: ${{ inputs.model && format('--model={0}', inputs.model) || '' }}
 
@@ -219,7 +255,7 @@ runs:
       if: always()
       shell: bash
       env:
-        GH_TOKEN: ${{ inputs.github-token || github.token }}
+        GH_TOKEN: ${{ steps.resolve-token.outputs.token }}
       run: |
         # Keep the 5 most recent caches, delete older ones
         # This prevents proliferation while handling concurrent runs safely
@@ -282,7 +318,7 @@ runs:
       if: steps.resolve-context.outputs.comment-id != '' && always()
       shell: bash
       env:
-        GH_TOKEN: ${{ inputs.github-token || github.token }}
+        GH_TOKEN: ${{ steps.resolve-token.outputs.token }}
         EXIT_CODE: ${{ steps.run-review.outputs.exit-code }}
         PR_NUMBER: ${{ steps.resolve-context.outputs.pr-number }}
       run: |
