fix memory path, adjust line number of PR comments

--- a/review-pr/agents/pr-review-feedback.yaml
+++ b/review-pr/agents/pr-review-feedback.yaml
@@ -18,7 +18,7 @@ agents:
 
     toolsets:
       - type: memory
-        path: pr-review-memory.db
+        path: .github/pr-review-memory.db
       - type: shell
 
 permissions:
