--- a/review-pr/action.yml
+++ b/review-pr/action.yml
@@ -117,12 +117,12 @@ runs:
         echo "files_count=$(wc -l < changed_files.txt | tr -d ' ')" >> $GITHUB_OUTPUT
 
     - name: Restore reviewer memory
-      uses: actions/cache@v4
+      uses: actions/cache/restore@1bd1e32a3bdc45362d1e726936510720a7c30a57 # v4.2.0
       with:
-        path: ${{ github.action_path }}/agents/pr-review-memory.db
-        key: pr-review-memory-${{ github.repository }}
+        path: ${{ github.workspace }}/.github/pr-review-memory.db
+        key: pr-review-memory-${{ github.repository }}-${{ github.run_id }}
         restore-keys: |
-          pr-review-memory-${{ github.repository }}
+          pr-review-memory-${{ github.repository }}-
 
     - name: Build review context
       id: context
@@ -210,10 +210,10 @@ runs:
 
     - name: Save reviewer memory
       if: always()
-      uses: actions/cache/save@v4
+      uses: actions/cache/save@1bd1e32a3bdc45362d1e726936510720a7c30a57 # v4.2.0
       with:
-        path: ${{ github.action_path }}/agents/pr-review-memory.db
-        key: pr-review-memory-${{ github.repository }}
+        path: ${{ github.workspace }}/.github/pr-review-memory.db
+        key: pr-review-memory-${{ github.repository }}-${{ github.run_id }}
 
     # ========================================
     # POST-REVIEW: Clean summary & reactions
