--- a/review-pr/learn/action.yml
+++ b/review-pr/learn/action.yml
@@ -68,12 +68,12 @@ runs:
 
     - name: Restore reviewer memory
       if: steps.check.outputs.is_agent == 'true'
-      uses: actions/cache@v4
+      uses: actions/cache/restore@1bd1e32a3bdc45362d1e726936510720a7c30a57 # v4.2.0
       with:
-        path: ${{ github.action_path }}/../agents/pr-review-memory.db
-        key: pr-review-memory-${{ github.repository }}
+        path: ${{ github.workspace }}/.github/pr-review-memory.db
+        key: pr-review-memory-${{ github.repository }}-${{ github.run_id }}
         restore-keys: |
-          pr-review-memory-${{ github.repository }}
+          pr-review-memory-${{ github.repository }}-
 
     - name: Process feedback
       if: steps.check.outputs.is_agent == 'true'
@@ -106,7 +106,7 @@ runs:
 
     - name: Save reviewer memory
       if: steps.check.outputs.is_agent == 'true' && always()
-      uses: actions/cache/save@v4
+      uses: actions/cache/save@1bd1e32a3bdc45362d1e726936510720a7c30a57 # v4.2.0
       with:
-        path: ${{ github.action_path }}/../agents/pr-review-memory.db
-        key: pr-review-memory-${{ github.repository }}
+        path: ${{ github.workspace }}/.github/pr-review-memory.db
+        key: pr-review-memory-${{ github.repository }}-${{ github.run_id }}
