--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -92,10 +92,23 @@ jobs:
     permissions:
       contents: read
     steps:
+      - name: Check if fork PR
+        id: fork-check
+        run: |
+          # Use default empty string to handle edge cases (deleted branches, malformed events)
+          HEAD_REPO="${{ github.event.pull_request.head.repo.full_name || '' }}"
+          if [[ "${{ github.event_name }}" == "pull_request" && "$HEAD_REPO" != "${{ github.repository }}" && -n "$HEAD_REPO" ]]; then
+            echo "⏭️ Skipping - fork PR (secrets not available)"
+            echo "is_fork=true" >> $GITHUB_OUTPUT
+          else
+            echo "is_fork=false" >> $GITHUB_OUTPUT
+          fi
+
       - name: Checkout code
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
 
       - name: Run test
+        if: steps.fork-check.outputs.is_fork != 'true'
         id: pirate
         uses: ./
         with:
@@ -104,6 +117,7 @@ jobs:
           openai-api-key: ${{ secrets.OPENAI_API_KEY }}
 
       - name: Validate output and exit code
+        if: steps.fork-check.outputs.is_fork != 'true'
         run: |
           OUTPUT_FILE="${{ steps.pirate.outputs.output-file }}"
 
@@ -148,6 +162,16 @@ jobs:
 
           echo "✅ Found agent response content"
           echo "Response preview: $(echo "$CONTENT" | head -n 1)"
+
+
+  test-invalid-agent:
+    name: Invalid Agent Test
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
 
       - name: Test should fail on invalid agent
         id: invalid-agent
