--- a/.github/workflows/review-pr.yml
+++ b/.github/workflows/review-pr.yml
@@ -157,6 +157,7 @@ jobs:
       - name: Generate GitHub App token
         if: steps.membership.outputs.is_member == 'true' && env.HAS_APP_SECRETS == 'true'
         id: app-token
+        continue-on-error: true  # Don't fail workflow if token generation fails
         uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a # v2
         with:
           app_id: ${{ secrets.CAGENT_REVIEWER_APP_ID }}
@@ -205,6 +206,7 @@ jobs:
       - name: Generate GitHub App token
         if: env.HAS_APP_SECRETS == 'true'
         id: app-token
+        continue-on-error: true  # Don't fail workflow if token generation fails
         uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a # v2
         with:
           app_id: ${{ secrets.CAGENT_REVIEWER_APP_ID }}
@@ -246,6 +248,7 @@ jobs:
       - name: Generate GitHub App token
         if: env.HAS_APP_SECRETS == 'true'
         id: app-token
+        continue-on-error: true  # Don't fail workflow if token generation fails
         uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a # v2
         with:
           app_id: ${{ secrets.CAGENT_REVIEWER_APP_ID }}
