--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Get GitHub App token
         id: app-token
         if: env.HAS_APP_SECRETS == 'true'
+        continue-on-error: true  # Don't fail workflow if token generation fails
         uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a # v2
         with:
           app_id: ${{ secrets.CAGENT_REVIEWER_APP_ID }}
