--- a/review-pr/agents/pr-review-feedback.yaml
+++ b/review-pr/agents/pr-review-feedback.yaml
@@ -1,7 +1,7 @@
 models:
   haiku:
     provider: anthropic
-    model: claude-haiku-4-20250514
+    model: claude-haiku-4-5
     max_tokens: 1024
 
 agents:
