--- a/review-pr/agents/pr-review.yaml
+++ b/review-pr/agents/pr-review.yaml
@@ -5,7 +5,7 @@ models:
     max_tokens: 8192
   haiku:
     provider: anthropic
-    model: claude-haiku-4
+    model: claude-haiku-4-5
     max_tokens: 4096
 
 agents:
