--- a/review-pr/agents/pr-review.yaml
+++ b/review-pr/agents/pr-review.yaml
@@ -101,7 +101,7 @@ agents:
         tools: [read_file, read_multiple_files, list_directory, directory_tree]
       - type: shell
       - type: memory
-        path: .github/pr-review-memory.db
+        path: .cache/pr-review-memory.db
 
   drafter:
     model: haiku
