--- a/.github/workflows/review-pr.yml
+++ b/.github/workflows/review-pr.yml
@@ -9,15 +9,14 @@
 #     pull_request_target:
 #       types: [ready_for_review, opened]
 #
-#   permissions:
-#     contents: read
-#     pull-requests: write
-#     issues: write
-#
 #   jobs:
 #     review:
 #       uses: docker/cagent-action/.github/workflows/review-pr.yml@latest
 #       secrets: inherit
+#       permissions:
+#         contents: read
+#         pull-requests: write
+#         issues: write
 
 name: PR Review
 
@@ -231,37 +230,53 @@ jobs:
           mistral-api-key: ${{ secrets.MISTRAL_API_KEY }}
 
   # ==========================================================================
-  # LEARN FROM FEEDBACK
-  # Processes replies to agent review comments for continuous improvement
+  # CAPTURE FEEDBACK
+  # Saves feedback data as an artifact for lazy processing. This job
+  # intentionally avoids using secrets so it works for fork PRs in public
+  # repos. The actual AI processing happens during the next review run,
+  # which has full secret access via pull_request_target or issue_comment.
   # ==========================================================================
-  learn-from-feedback:
+  capture-feedback:
     if: github.event_name == 'pull_request_review_comment' && github.event.comment.in_reply_to_id
     runs-on: ubuntu-latest
-    env:
-      HAS_APP_SECRETS: ${{ secrets.CAGENT_REVIEWER_APP_ID != '' }}
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Check if reply is to agent comment
+        id: check
+        shell: bash
+        env:
+          GH_TOKEN: ${{ github.token }}
+          PARENT_ID: ${{ github.event.comment.in_reply_to_id }}
+        run: |
+          if [ -z "$PARENT_ID" ]; then
+            echo "is_agent=false" >> $GITHUB_OUTPUT
+            echo "⏭️ Not a reply comment, skipping"
+            exit 0
+          fi
 
-      # Generate GitHub App token for custom app identity (optional - falls back to github.token)
-      - name: Generate GitHub App token
-        if: env.HAS_APP_SECRETS == 'true'
-        id: app-token
-        continue-on-error: true  # Don't fail workflow if token generation fails
-        uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a # v2
-        with:
-          app_id: ${{ secrets.CAGENT_REVIEWER_APP_ID }}
-          private_key: ${{ secrets.CAGENT_REVIEWER_APP_PRIVATE_KEY }}
+          parent=$(gh api repos/${{ github.repository }}/pulls/comments/$PARENT_ID 2>/dev/null || echo "{}")
+          if echo "$parent" | jq -r '.body // ""' | grep -q "<!-- cagent-review -->"; then
+            echo "is_agent=true" >> $GITHUB_OUTPUT
+            echo "✅ Reply is to an agent review comment"
+          else
+            echo "is_agent=false" >> $GITHUB_OUTPUT
+            echo "⏭️ Not a reply to agent comment, skipping"
+          fi
 
-      - name: Learn from user feedback
-        uses: docker/cagent-action/review-pr/learn@latest
+      - name: Save feedback data
+        if: steps.check.outputs.is_agent == 'true'
+        shell: bash
+        env:
+          COMMENT_JSON: ${{ toJSON(github.event.comment) }}
+        run: |
+          mkdir -p feedback
+          echo "$COMMENT_JSON" > feedback/feedback.json
+          echo "📦 Saved feedback data for async processing"
+
+      - name: Upload feedback artifact
+        if: steps.check.outputs.is_agent == 'true'
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
         with:
-          github-token: ${{ steps.app-token.outputs.token || github.token }}
-          anthropic-api-key: ${{ secrets.ANTHROPIC_API_KEY }}
-          openai-api-key: ${{ secrets.OPENAI_API_KEY }}
-          google-api-key: ${{ secrets.GOOGLE_API_KEY }}
-          aws-bearer-token-bedrock: ${{ secrets.AWS_BEARER_TOKEN_BEDROCK }}
-          xai-api-key: ${{ secrets.XAI_API_KEY }}
-          nebius-api-key: ${{ secrets.NEBIUS_API_KEY }}
-          mistral-api-key: ${{ secrets.MISTRAL_API_KEY }}
+          name: pr-review-feedback
+          path: feedback/
+          retention-days: 90
