--- a/review-pr/action.yml
+++ b/review-pr/action.yml
@@ -157,6 +157,7 @@ runs:
       run: mkdir -p "${{ github.workspace }}/.cache"
 
     - name: Restore reviewer memory
+      id: restore-memory
       uses: actions/cache/restore@1bd1e32a3bdc45362d1e726936510720a7c30a57 # v4.2.0
       with:
         path: ${{ github.workspace }}/.cache/pr-review-memory.db
@@ -164,6 +165,95 @@ runs:
         restore-keys: |
           pr-review-memory-${{ github.repository }}-
 
+    # ========================================
+    # PROCESS PENDING FEEDBACK
+    # Downloads feedback artifacts left by capture-feedback jobs
+    # and processes them into memory before the review runs.
+    # ========================================
+    - name: Collect pending feedback
+      id: pending-feedback
+      continue-on-error: true
+      shell: bash
+      env:
+        GH_TOKEN: ${{ steps.resolve-token.outputs.token }}
+      run: |
+        ARTIFACTS=$(gh api "repos/${{ github.repository }}/actions/artifacts?name=pr-review-feedback" \
+          --jq '.artifacts[].id' 2>/dev/null || echo "")
+
+        if [ -z "$ARTIFACTS" ]; then
+          echo "has_feedback=false" >> $GITHUB_OUTPUT
+          echo "ℹ️  No pending feedback to process"
+          exit 0
+        fi
+
+        mkdir -p pending_feedback
+        COMBINED=""
+        COUNT=0
+
+        for AID in $ARTIFACTS; do
+          # Download artifact zip
+          gh api "repos/${{ github.repository }}/actions/artifacts/$AID/zip" > "feedback_$AID.zip" 2>/dev/null || continue
+          unzip -o "feedback_$AID.zip" -d "pending_feedback/" 2>/dev/null || continue
+
+          if [ -f pending_feedback/feedback.json ]; then
+            FB_PATH=$(jq -r '.path // "unknown"' pending_feedback/feedback.json)
+            FB_LINE=$(jq -r '.line // "?"' pending_feedback/feedback.json)
+            FB_BODY=$(jq -r '.body // ""' pending_feedback/feedback.json)
+
+            COMBINED+="- **File:** ${FB_PATH} (line ${FB_LINE})"$'\n'
+            COMBINED+="  **Feedback:** ${FB_BODY}"$'\n\n'
+            ((COUNT++)) || true
+          fi
+
+          rm -f pending_feedback/feedback.json
+
+          # Delete processed artifact
+          gh api "repos/${{ github.repository }}/actions/artifacts/$AID" -X DELETE 2>/dev/null || true
+        done
+
+        if [ "$COUNT" -gt 0 ]; then
+          echo "has_feedback=true" >> $GITHUB_OUTPUT
+          {
+            echo "prompt<<FEEDBACK_EOF"
+            echo "$COMBINED"
+            echo "FEEDBACK_EOF"
+          } >> $GITHUB_OUTPUT
+          echo "✅ Found $COUNT pending feedback item(s) to process"
+        else
+          echo "has_feedback=false" >> $GITHUB_OUTPUT
+        fi
+
+    - name: Process pending feedback
+      if: steps.pending-feedback.outputs.has_feedback == 'true'
+      continue-on-error: true
+      uses: docker/cagent-action@latest
+      with:
+        agent: ${{ github.action_path }}/agents/pr-review-feedback.yaml
+        prompt: |
+          Developers left feedback on previous review comments. Learn from each item:
+
+          ${{ steps.pending-feedback.outputs.prompt }}
+
+          For each item:
+          1. If they're correcting a false positive, add a memory to avoid this mistake
+          2. If they're asking for clarification, note what was unclear
+          3. If they're agreeing and adding context, store the additional insight
+
+          Use add_memory to record what you learned from each feedback item.
+        anthropic-api-key: ${{ inputs.anthropic-api-key }}
+        openai-api-key: ${{ inputs.openai-api-key }}
+        google-api-key: ${{ inputs.google-api-key }}
+        aws-bearer-token-bedrock: ${{ inputs.aws-bearer-token-bedrock }}
+        xai-api-key: ${{ inputs.xai-api-key }}
+        nebius-api-key: ${{ inputs.nebius-api-key }}
+        mistral-api-key: ${{ inputs.mistral-api-key }}
+        github-token: ${{ steps.resolve-token.outputs.token }}
+        cagent-version: ${{ inputs.cagent-version }}
+        extra-args: ${{ inputs.model && format('--model={0}', inputs.model) || '' }}
+
+    # ========================================
+    # BUILD REVIEW CONTEXT
+    # ========================================
     - name: Build review context
       id: context
       shell: bash
@@ -250,6 +340,7 @@ runs:
 
     - name: Save reviewer memory
       if: always()
+      continue-on-error: true  # Don't fail if memory file doesn't exist (first run)
       uses: actions/cache/save@1bd1e32a3bdc45362d1e726936510720a7c30a57 # v4.2.0
       with:
         path: ${{ github.workspace }}/.cache/pr-review-memory.db
