--- a/review-pr/action.yml
+++ b/review-pr/action.yml
@@ -1,4 +1,4 @@
-name: "PR Review with CAgent"
+name: "PR Review with cagent"
 description: "AI-powered pull request review with automatic learning from feedback"
 author: "Docker"
 
@@ -48,7 +48,7 @@ inputs:
   cagent-version:
     description: "Version of cagent to use"
     required: false
-    default: "v1.20.6"
+    default: "v1.23.0"
   model:
     description: "Model to use for reviews (e.g., anthropic/claude-sonnet-4-5, openai/gpt-4o)"
     required: false
