Include telemetry tags so we can track usage of the action
Signed-off-by: Derek Misler <derek.misler@docker.com>

--- a/action.yml
+++ b/action.yml
@@ -426,6 +426,7 @@ runs:
         MCP_INSTALLED: ${{ steps.setup-binaries.outputs.mcp-installed }}
         QUIET: ${{ inputs.quiet }}
         ADD_PROMPT_FILES: ${{ inputs.add-prompt-files }}
+        TELEMETRY_TAGS: "source=github-actions,repo=${{ github.repository }},workflow=${{ github.workflow }},run_id=${{ github.run_id }}"
       run: |
         set -e
 
